--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bank Chatbot",
   "main": "server.js",
   "scripts": {
-    "start": "npm run build:dev & node server.js",
+    "start": "npm run build:dev & nodemon server.js",
     "build:dev": "webpack --config webpack/webpack.config.dev.js"
   },
   "repository": {
