--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "express-session": "^1.15.6",
     "request": "^2.87.0",
     "vue": "^2.5.16",
-    "vue-router": "^3.0.1"
+    "vue-google-autocomplete": "^1.1.0",
+    "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.9.7"
   },
   "devDependencies": {
     "ajv": "^6.5.1",
@@ -48,6 +50,5 @@
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3"
-    
   }
 }
