Migrate core functionality of chatbot into web server

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,20 @@
 PORT=
 
-CORE_URL=
+DB_PORT=
+DB_HOST=
+DB_USER=
+DB_PASS=
+DB_NAME=
+
+SKIP_REDIS=
+REDIS_HOST=
+REDIS_PORT=
+REDIT_TTL=
+
+CHAT_URL=
+CHAT_USER=
+CHAT_PASS=
+CHAT_ID=
+CHAT_VERSION==
+
+JWT_SECRET=
