--- a/package.json
+++ b/package.json
@@ -24,15 +24,24 @@
   },
   "homepage": "https://github.com/questronix/bank_chat#readme",
   "dependencies": {
+    "botkit": "^0.6.14",
+    "botkit-middleware-watson": "^1.7.1",
+    "connect-redis": "^3.3.3",
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "helmet": "^3.12.1",
+    "jsonwebtoken": "^8.3.0",
+    "mysql": "^2.15.0",
+    "redis": "^2.8.0",
     "request": "^2.87.0",
     "vue": "^2.5.16",
     "vue-google-autocomplete": "^1.1.0",
     "vue-router": "^3.0.1",
-    "vue2-google-maps": "^0.9.7"
+    "vue2-google-maps": "^0.9.7",
+    "watson-developer-cloud": "^3.5.3",
+    "winston": "^3.0.0"
   },
   "devDependencies": {
     "ajv": "^6.5.1",
