Convert conversation into assistant

--- a/.env.sample
+++ b/.env.sample
@@ -12,9 +12,8 @@ REDIS_PORT=
 REDIT_TTL=
 
 CHAT_URL=
-CHAT_USER=
-CHAT_PASS=
 CHAT_ID=
-CHAT_VERSION==
+CHAT_API_KEY=
+CHAT_VERSION=
 
 JWT_SECRET=
