--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Bank Chatbot",
   "main": "server.js",
   "scripts": {
-    "start": "npm run build:dev & node server.js",
-    "build:dev": "webpack --config webpack/webpack.config.dev.js",
-    "dev": "npm run build:dev & nodemon server.js"
+    "start": "npm run build:prod & node server.js",
+    "dev": "npm run build:dev & nodemon server.js",
+    "build:prod": "NODE_ENV=production webpack --config webpack/webpack.config.dev.js",
+    "build:dev": "NODE_ENV=development webpack --config webpack/webpack.config.dev.js --watch"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   "dependencies": {
     "botkit": "^0.6.14",
     "botkit-middleware-watson": "^1.7.1",
+    "cfenv": "^1.1.0",
     "connect-redis": "^3.3.3",
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
@@ -49,15 +51,18 @@
     "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.0",
     "nodemon": "^1.17.5",
+    "optimize-css-assets-webpack-plugin": "^4.0.3",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
     "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.5.16",
