--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/questronix/bank_chat#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "botkit": "^0.6.14",
     "botkit-middleware-watson": "^1.7.1",
     "cfenv": "^1.1.0",
@@ -35,6 +36,8 @@
     "express-session": "^1.15.6",
     "helmet": "^3.12.1",
     "jsonwebtoken": "^8.3.0",
+    "mathjs": "^5.0.3",
+    "money": "^0.2.0",
     "mysql": "^2.15.0",
     "redis": "^2.8.0",
     "request": "^2.87.0",
