--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bank Chatbot",
   "main": "server.js",
   "scripts": {
-    "start": "npm run build:prod & node server.js",
+    "start": "node server.js",
+    "prod": "npm run build:prod & node server.js",
     "dev": "npm run build:dev & nodemon server.js",
     "build:prod": "NODE_ENV=production webpack --config webpack/webpack.config.dev.js",
     "build:dev": "NODE_ENV=development webpack --config webpack/webpack.config.dev.js --watch"
@@ -71,5 +72,12 @@
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3"
+  },
+  "engines": {
+    "node": "9.x",
+    "npm": "5.6.0"
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
